codegen/tests/ui/struct/method.stderr
error: unknown request method marker: req
  --> tests/ui/struct/method.rs:11:7
   |
11 |     #[req]
   |       ^^^
